force-app/main/default/objects/ApplicationDocument__c/ApplicationDocument__c.object-meta.xml
<CustomObject>
    <label>Application Document</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>