force-app/main/default/objects/ApplicationDocument__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolment</fullName>
            </value>
            <value>
                <fullName>Juilliard Summer Arts</fullName>
            </value>
            <value>
                <fullName>Reenrolment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>