force-app/main/default/objects/ApplicationDocument__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Stage__c</columns>
    <columns>Required__c</columns>
    <columns>YearGrade__c</columns>
    <columns>RecordType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>