force-app/main/default/objects/ApplicationDocument__c/listViews/China_BL.listView-meta.xml
<ListView>
    <fullName>China_BL</fullName>
    <columns>NAME</columns>
    <columns>School__c</columns>
    <columns>Stage__c</columns>
    <columns>Required__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>School__c</field>
        <operation>contains</operation>
        <value>FoShan,FangShan,NingBo,NanTong</value>
    </filters>
    <label>China_BL</label>
    <sharedTo>
        <role>China_BL</role>
    </sharedTo>
</ListView>